# vortex_rag_engine

./: .gitignore  README.md  docker-compose.yml  technical_concepts.md
gateway/: main.go
worker/: Dockerfile  config.py  ingest_wisdom.py  pyproject.toml  worker.py
